# terrafarm

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE.md  README.md  dictionary.sample.json
.github/workflows/: main.yml  release.yml
.github/workflows/chglog/: changelog.yml  release.yml
src/: dictionary.json  dictionary.rs  main.rs
