[package]
authors = ["Austin Mehmet"]
name = "farm"
description = "A fork-able CLI used to query Terraform starter files to assist in getting developers off the ground for cloud deployments"
version = "1.0.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/austinmehmet/terrafarm"

[dependencies]
bytes = "1"
clap = "~2.33"
log = "0.4.0"
env_logger = "0.9.0"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"